--- a/openai/simple-agent/pyproject.toml
+++ b/openai/simple-agent/pyproject.toml
@@ -7,7 +7,9 @@ authors = [
     { name = "keonoh00", email = "keonoh00@gmail.com" }
 ]
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "openai>=2.5.0",
+]
 
 [project.scripts]
 simple-agent = "simple_agent:main"
