--- a/crewai/job-hunter/pyproject.toml
+++ b/crewai/job-hunter/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "crewai>=1.2.0",
+    "firecrawl-py>=2.16.3",
     "python-dotenv>=1.1.1",
 ]
