--- a/crewai/content-pipline-agent/pyproject.toml
+++ b/crewai/content-pipline-agent/pyproject.toml
@@ -4,4 +4,4 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = ["crewai>=1.2.0", "firecrawl-py>=2.16.3", "python-dotenv>=1.1.1"]
