--- a/openai/chatgpt/pyproject.toml
+++ b/openai/chatgpt/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "openai-agents[viz]>=0.2.6",
     "python-dotenv>=1.1.1",
     "streamlit>=1.48.0",
+    "yahoo-finance-server>=0.1.1",
 ]
 
 [dependency-groups]
