fix: migrate from mono repo style to packaging ollama separate

--- a/google-adk/financial-advisor/pyproject.toml
+++ b/google-adk/financial-advisor/pyproject.toml
@@ -18,4 +18,4 @@ dependencies = [
 dev = ["watchdog>=6.0.0"]
 
 [tool.uv.sources]
-ollama = { workspace = true }
+ollama = { path = "../../packages/ollama", editable = true }
