--- a/google-adk/youtube-shorts-maker/pyproject.toml
+++ b/google-adk/youtube-shorts-maker/pyproject.toml
@@ -8,10 +8,11 @@ dependencies = [
   "google-adk>=1.12.0",
   "google-genai>=1.31.0",
   "litellm>=1.76.0",
-  "ollama",
+  "ollama>=0.6.0",
+  "ollama-wrapper",
   "openai>=1.101.0",
   "python-dotenv>=1.1.1",
 ]
 
 [tool.uv.sources]
-ollama = { path = "../../packages/ollama", editable = true }
+ollama-wrapper = { path = "../../packages/ollama-wrapper", editable = true }
