--- a/packages/ollama-wrapper/pyproject.toml
+++ b/packages/ollama-wrapper/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "ollama"
+name = "ollama-wrapper"
 version = "0.1.0"
 description = "Unified Ollama LLM wrapper for multiple AI frameworks (CrewAI, OpenAI, Google ADK, LangGraph)"
 readme = "README.md"
@@ -22,4 +22,4 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["ollama"]
+packages = ["ollama-wrapper"]
