--- a/packages/ollama-wrapper/pyproject.toml
+++ b/packages/ollama-wrapper/pyproject.toml
@@ -4,17 +4,11 @@ version = "0.1.0"
 description = "Unified Ollama LLM wrapper for multiple AI frameworks (CrewAI, OpenAI, Google ADK, LangGraph)"
 readme = "README.md"
 requires-python = ">=3.14"
-dependencies = []
-
-[project.optional-dependencies]
-openai = ["openai>=1.0.0"]
-google-adk = ["google-adk>=1.11.0"]
-langchain = ["langchain>=0.1.0", "langchain-community>=0.0.20"]
-all = [
+dependencies = [
     "openai>=1.0.0",
     "google-adk>=1.11.0",
     "langchain>=0.1.0",
-    "langchain-community>=0.0.20",
+    "langchain-community>=0.0.20"
 ]
 
 [build-system]
@@ -22,4 +16,4 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["ollama-wrapper"]
+packages = ["ollama_wrapper"]
