--- a/google-adk/youtube-shorts-maker/pyproject.toml
+++ b/google-adk/youtube-shorts-maker/pyproject.toml
@@ -1,22 +1,18 @@
 [project]
-name = "financial-advisor"
+name = "youtube-shorts-maker"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
-  "firecrawl-py==2.16.3",
-  "google-adk>=1.11.0",
+  "google-adk>=1.12.0",
   "google-genai>=1.31.0",
-  "litellm>=1.75.8",
+  "litellm>=1.76.0",
+  "ollama>=0.6.0",
   "ollama-wrapper",
+  "openai>=1.101.0",
   "python-dotenv>=1.1.1",
-  "yfinance>=0.2.65",
 ]
-
-[dependency-groups]
-dev = ["watchdog>=6.0.0"]
-
 
 [tool.uv.sources]
 ollama-wrapper = { path = "../../packages/ollama-wrapper", editable = true }
