--- a/google-adk/email-refiner/pyproject.toml
+++ b/google-adk/email-refiner/pyproject.toml
@@ -4,4 +4,13 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
-dependencies = []
+dependencies = [
+    "google-adk>=1.12.0",
+    "google-genai>=1.31.0",
+    "litellm>=1.76.0",
+]
+
+[dependency-groups]
+dev = [
+    "ipykernel>=6.30.1",
+]
