--- a/google-adk/email-refiner/pyproject.toml
+++ b/google-adk/email-refiner/pyproject.toml
@@ -8,9 +8,13 @@ dependencies = [
     "google-adk>=1.12.0",
     "google-genai>=1.31.0",
     "litellm>=1.76.0",
+    "ollama-wrapper"
 ]
 
 [dependency-groups]
 dev = [
     "ipykernel>=6.30.1",
 ]
+
+[tool.uv.sources]
+ollama-wrapper = { path = "../../packages/ollama-wrapper", editable = true }
