chore: remove main.py from travel-advisor and add new api.ipynb file; update pyproject.toml to include dev dependencies for ipykernel

--- a/google-adk/youtube-shorts-maker/pyproject.toml
+++ b/google-adk/youtube-shorts-maker/pyproject.toml
@@ -16,3 +16,8 @@ dependencies = [
 
 [tool.uv.sources]
 ollama-wrapper = { path = "../../packages/ollama-wrapper", editable = true }
+
+[dependency-groups]
+dev = [
+    "ipykernel>=6.30.1",
+]
