Google adk/travel advisor (#7)
* chore: uv init

* chore: dependencies

* chore: update dependencies and add new packages in pyproject.toml and uv.lock

* feat: add travel advisor agent with descriptions and instructions for location-based assistance

* feat: implement TravelAdvisorAgent with weather, exchange rate, and local attractions tools for location-based assistance

* chore: remove main.py from travel-advisor and add new api.ipynb file; update pyproject.toml to include dev dependencies for ipykernel

* chore: update pyproject.toml and uv.lock to add new development dependencies including ipykernel, appnope, asttokens, comm, executing, and traitlets; remove jsonpatch and typing-inspect

* chore: update uv.lock

* chore: add demo of API notebook for Travel Advisor

* feat: enhance API notebook for Travel Advisor with Server Sent Events(SSE)

* refactor: update event handling in API notebook for Travel Advisor to use a generator for Server Sent Events (SSE)

* feat: add Travel Advisor agent implementation with weather, currency exchange, and local attractions tools; create prompt and runner notebook for user interaction

--- a/google-adk/travel-advisor/pyproject.toml
+++ b/google-adk/travel-advisor/pyproject.toml
@@ -1,23 +1,20 @@
 [project]
-name = "youtube-shorts-maker"
+name = "travel-advisor"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
-  "google-adk>=1.12.0",
-  "google-genai>=1.31.0",
-  "litellm>=1.76.0",
-  "ollama>=0.6.0",
-  "ollama-wrapper",
-  "openai>=1.101.0",
-  "python-dotenv>=1.1.1",
+    "google-adk[eval]>=1.12.0",
+    "google-genai>=1.31.0",
+    "litellm>=1.76.0",
+    "requests>=2.32.5",
+    "sseclient-py>=1.8.0",
+    "ollama-wrapper",
 ]
 
 [tool.uv.sources]
 ollama-wrapper = { path = "../../packages/ollama-wrapper", editable = true }
 
 [dependency-groups]
-dev = [
-    "ipykernel>=6.30.1",
-]
+dev = ["ipykernel>=6.30.1"]
