--- a/openai/deep-chat/pyproject.toml
+++ b/openai/deep-chat/pyproject.toml
@@ -8,4 +8,8 @@ dependencies = [
     "openai-agents>=0.5.1",
     "python-dotenv>=1.2.1",
     "streamlit>=1.51.0",
+    "ollama-wrapper",
 ]
+
+[tool.uv.sources]
+ollama-wrapper = { path = "../../packages/ollama-wrapper", editable = true }
