--- a/openai/deep-chat/pyproject.toml
+++ b/openai/deep-chat/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "python-dotenv>=1.2.1",
     "streamlit>=1.51.0",
     "ollama-wrapper",
+    "opendataloader-pdf>=1.2.0",
 ]
 
 [tool.uv.sources]
