--- a/langgraph/hi-langgraph/pyproject.toml
+++ b/langgraph/hi-langgraph/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
   "grandalf==0.8",
+  "langchain-community>=0.3.31",
+  "langchain-ollama>=0.3.10",
   "langchain[openai]==0.3.27",
   "langgraph==0.6.6",
   "langgraph-checkpoint-sqlite==2.0.11",
