chore: update dependencies and add ollama-wrapper source in pyproject.toml; enhance uv.lock with new packages and version updates

--- a/langgraph/hi-langgraph/pyproject.toml
+++ b/langgraph/hi-langgraph/pyproject.toml
@@ -13,7 +13,12 @@ dependencies = [
   "langgraph-checkpoint-sqlite==2.0.11",
   "langgraph-cli[inmem]>=0.4.0",
   "python-dotenv==1.1.1",
+  "ollama-wrapper",
 ]
 
 [dependency-groups]
 dev = ["ipykernel>=6.30.1"]
+
+
+[tool.uv.sources]
+ollama-wrapper = { path = "../../packages/ollama-wrapper", editable = true }
