--- a/langgraph/thumbnail-maker/pyproject.toml
+++ b/langgraph/thumbnail-maker/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+  "langchain-ollama>=1.0.0",
   "langchain[openai]>=0.3.27",
   "langgraph>=0.6.7",
   "langgraph-cli[inmem]>=0.4.2",
