--- a/langgraph/tutor-agent/pyproject.toml
+++ b/langgraph/tutor-agent/pyproject.toml
@@ -5,8 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-  "firecrawl-py==2.16",
+  "firecrawl-py>=2.16.0",
   "grandalf==0.8",
+  "langchain-ollama>=0.3.10",
   "langchain[openai]==0.3.27",
   "langgraph==0.6.6",
   "langgraph-checkpoint-sqlite==2.0.11",
